--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "crates/activity_indicator",
     "crates/activity_indicator2",
     "crates/ai",
+    "crates/appearance",
     "crates/assistant",
     "crates/assistant2",
     "crates/audio",
@@ -33,8 +34,6 @@ members = [
     "crates/copilot_button",
     "crates/db",
     "crates/db2",
-    "crates/refineable",
-    "crates/refineable/derive_refineable",
     "crates/diagnostics",
     "crates/diagnostics2",
     "crates/drag_and_drop",
@@ -52,9 +51,9 @@ members = [
     "crates/go_to_line",
     "crates/go_to_line2",
     "crates/gpui",
-    "crates/gpui_macros",
     "crates/gpui2",
     "crates/gpui2_macros",
+    "crates/gpui_macros",
     "crates/install_cli",
     "crates/install_cli2",
     "crates/journal",
@@ -93,6 +92,9 @@ members = [
     "crates/quick_action_bar2",
     "crates/recent_projects",
     "crates/recent_projects2",
+    "crates/refineable",
+    "crates/refineable/derive_refineable",
+    "crates/rich_text",
     "crates/rope",
     "crates/rpc",
     "crates/rpc2",
@@ -105,7 +107,7 @@ members = [
     "crates/snippet",
     "crates/sqlez",
     "crates/sqlez_macros",
-    "crates/rich_text",
+    "crates/story",
     "crates/storybook2",
     "crates/sum_tree",
     "crates/terminal",
@@ -119,16 +121,15 @@ members = [
     "crates/theme_selector2",
     "crates/ui2",
     "crates/util",
-    "crates/story",
-    "crates/vim",
     "crates/vcs_menu",
-    "crates/workspace2",
+    "crates/vim",
     "crates/welcome",
     "crates/welcome2",
+    "crates/workspace2",
     "crates/xtask",
     "crates/zed",
-    "crates/zed2",
     "crates/zed-actions",
+    "crates/zed2",
     "crates/zed_actions2"
 ]
 default-members = ["crates/zed"]
